[gd_scene load_steps=3 format=3 uid="uid://c4y6jymee8mml"]

[ext_resource type="Script" path="res://pet.gd" id="1_kdyag"]
[ext_resource type="Texture2D" uid="uid://bniilom7ygjqo" path="res://myvpet.jpg" id="2_bngsr"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_kdyag")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(369, 627)
texture = ExtResource("2_bngsr")

[node name="Timer" type="Timer" parent="."]

[node name="HungerProgressBar" type="ProgressBar" parent="."]
offset_left = 766.0
offset_top = 570.0
offset_right = 913.0
offset_bottom = 626.0

[node name="HappinessProgressBar" type="ProgressBar" parent="."]
offset_left = 761.0
offset_top = 424.0
offset_right = 1024.0
offset_bottom = 475.0

[node name="EnergyProgressBar" type="ProgressBar" parent="."]
offset_left = 751.0
offset_top = 291.0
offset_right = 1088.0
offset_bottom = 349.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
